--- a/package.json
+++ b/package.json
@@ -5,13 +5,22 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha dist/test/test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/chai": "^4.1.6",
+    "@types/fs-extra": "^5.0.4",
+    "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.3",
+    "@types/winston": "^2.3.9",
+    "bignumber.js": "^7.2.1",
+    "chai": "^4.2.0",
     "colors": "^1.3.2",
-    "tslint": "^5.11.0"
+    "fs-extra": "^5.0.0",
+    "mocha": "^5.2.0",
+    "tslint": "^5.11.0",
+    "winston": "^2.4.2"
   }
 }
