--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "test": "mocha dist/test/test.js"
+    "test": "mocha dist/test/test.js",
+    "build": "gulp build"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +20,13 @@
     "chai": "^4.2.0",
     "colors": "^1.3.2",
     "fs-extra": "^5.0.0",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "mocha": "^5.2.0",
     "tslint": "^5.11.0",
     "winston": "^2.4.2"
+  },
+  "devDependencies": {
+    "typescript": "^3.1.2"
   }
 }
