--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/fs-extra": "^5.0.4",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.11.3",
+    "@types/sqlite3": "^3.1.3",
     "@types/winston": "^2.3.9",
     "bignumber.js": "^7.2.1",
     "chai": "^4.2.0",
@@ -23,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-typescript": "^5.0.0-alpha.3",
     "mocha": "^5.2.0",
+    "sqlite3": "^4.0.2",
     "tslint": "^5.11.0",
     "winston": "^2.4.2"
   },
